--- a/package.json
+++ b/package.json
@@ -54,8 +54,13 @@
 		"vite": "^5.0.11"
 	},
 	"dependencies": {
+		"@anthropic-ai/sdk": "^0.32.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"@tanstack/svelte-query": "^5.62.0",
+		"axios": "^1.7.8",
+		"htmlparser2": "^9.1.0",
+		"youtube-transcript": "^1.2.1"
 	}
 }
