--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@tanstack/svelte-query": "^5.62.0",
 		"axios": "^1.7.8",
 		"htmlparser2": "^9.1.0",
+		"marked": "^15.0.3",
 		"youtube-transcript": "^1.2.1"
 	}
 }
