--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
 	"peerDependencies": {
 		"svelte": "^5.0.0"
 	},
+	"engines": {
+		"node": "18.x"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
